RESOLVED FIXED213897
FloatingPointEnvironment::saveMainThreadEnvironment() is not called for macOS Catalyst apps on Apple Silicon
https://bugs.webkit.org/show_bug.cgi?id=213897
Summary FloatingPointEnvironment::saveMainThreadEnvironment() is not called for macOS...
Chris Dumez
Reported 2020-07-02 12:36:16 PDT
FloatingPointEnvironment::saveMainThreadEnvironment() is not called on macOS with Apple Silicon. This causes crashes because FloatingPointEnvironment::propagateMainThreadEnvironment() for worker threads on this platform.
Attachments
Patch (5.80 KB, patch)
2020-07-02 12:44 PDT, Chris Dumez
no flags
Patch (6.02 KB, patch)
2020-07-02 12:58 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-07-02 12:36:28 PDT
Chris Dumez
Comment 2 2020-07-02 12:44:32 PDT
Darin Adler
Comment 3 2020-07-02 12:52:14 PDT
Comment on attachment 403388 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=403388&action=review > Source/WebKit/Shared/ios/AuxiliaryProcessIOS.mm:55 > UNUSED_PARAM(parameters); > UNUSED_PARAM(sandboxParameters); We could remove the argument names now instead of using UNUSED_PARAM.
Chris Dumez
Comment 4 2020-07-02 12:58:13 PDT
Mark Lam
Comment 5 2020-07-02 13:05:39 PDT
Comment on attachment 403389 [details] Patch r=me too.
EWS
Comment 6 2020-07-02 13:27:01 PDT
Committed r263857: <https://trac.webkit.org/changeset/263857> All reviewed patches have been landed. Closing bug and clearing flags on attachment 403389 [details].
Note You need to log in before you can comment on or make changes to this bug.